manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ohsome-api-integration
  labels:
    app.kubernetes.io/name: ohsome-api
    app.kubernetes.io/instance: ohsome-api-integration
    app.kubernetes.io/version: v0.0.0
    app.kubernetes.io/managed-by: ArgoCD
spec:
  selector:
    app.kubernetes.io/name: ohsome-api
    app.kubernetes.io/instance: ohsome-api-integration
  ports:
  - port: 80
    targetPort: 80
